<resources>
    <string name="app_name">Recipe App</string>
    <string name="the_recipe_app">The Recipe App</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="about_creator">About Creator</string>
    <string name="logout">Logout</string>
    <string name="creator_name">Hossam Mohsen</string>
    <string name="about_bio">Hossam Mohsen is a self-taught developer focused on software development in general. He is also specialized in back-end development and has worked on mobile and web apps. Hossam worked with many languages and platforms including: Android, Flutter, NodeJS, Java, Kotlin, and more.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="search_meals">Search meals</string>
    <string name="start_typing">Start typing to get meals!</string>
    <string name="no_meals">No meals found</string>
    <string name="instructions">Instructions:</string>
    <string name="read_less">Read less</string>
    <string name="read_more">Read more</string>
    <string name="view_video">View Video</string>
</resources>