<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="me.hossamohsen.recipeapp.ui.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="me.hossamohsen.recipeapp.ui.fragments.about.AboutFragment"
        android:label="@string/about_creator"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="me.hossamohsen.recipeapp.ui.fragments.favorite.FavoriteFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="me.hossamohsen.recipeapp.ui.fragments.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="me.hossamohsen.recipeapp.ui.fragments.recipedetail.RecipeDetailFragment"
        android:label="@string/recipe_details"
        tools:layout="@layout/fragment_recipe_detail" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>